--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,12 @@
     <string name="enter_password">Nhập mật khẩu</string>
     <string name="register">Đăng ký</string>
     <string name="have_an_account">Bạn chưa có tài khoản!</string>
+    <string name="enter_name">Nhập họ và tên</string>
+    <string name="enter_phone_number">Nhập số điện thoại</string>
+    <string name="re_enter_password">Nhập lại mật khẩu</string>
     <string name="have_you_created_an_account_yet">Bạn đã có tài khoản !</string>
+    <string name="read">Read</string>
+    <string name="un_read">Unread</string>
 
     <string name="title_splash">App Nike Sport - Take it easyyyy!</string>
     <string name="welcome_login">Chào mừng quay lại! Điền thông tin đăng nhập</string>
@@ -19,6 +24,10 @@
     <string name="forgot_password">Quên mật khẩu ?</string>
     <string name="policy">Qua việc đăng nhập tài khoản, bạn đồng ý với các <font color='#007FF3'>Điều khoản sử dụng</font> và <font color='#007FF3'>Chính sách bảo mật</font> của chúng tôi</string>
     <string name="register_now">Đăng ký ngay</string>
+    <string name="title_require_input_register">Hãy điền các thông tin cần thiết vào các ô phía dưới</string>
+    <string name="label_name">Họ và tên</string>
+    <string name="label_phone_number">Số điện thoại</string>
+    <string name="re_password">Nhập lại mật khẩu</string>
     <string name="remember_login">Ghi nhớ</string>
 
 </resources>
